change notifications icon to bell

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -81,7 +81,7 @@
         <li id='notifications-menu' class="dropdown">
           <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-inbox"></i>&nbsp;<span id="notification_badge" class="badge alert-danger"></span>
+            <i class="fa fa-bell"></i>&nbsp;<span id="notification_badge" class="badge alert-danger"></span>
           </a>
           <ul class="dropdown-menu" id="notification_dropdown">
           </ul>
