--- a/src/notifications/templates/notifications/list.html
+++ b/src/notifications/templates/notifications/list.html
@@ -6,7 +6,7 @@
   <a href="{% url 'notifications:list_unread' %}">Unread</a> |
   <a href="{% url 'notifications:read_all' %}">Mark all read</a>
 </small>
-<i class="fa fa-inbox pull-right"></i>{% endblock %}
+<i class="fa fa-bell pull-right"></i>{% endblock %}
 {% block content %}
 
 <table class='table'>
