--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -40,7 +40,13 @@
               {% elif s.is_awaiting_approval %}
                 <small>{{s.time_completed|timesince}} ago</small>
               {% elif s.is_returned %}
-                <small>{{s.updated|timesince}} ago</small>
+                <small>
+                  {% if s.time_returned %}
+                    {{s.time_returned|timesince}} ago
+                  {% else %}
+                    Unknown time ago
+                  {% endif %}
+                </small>
               {% else %}
                 In progress
               {% endif %}
