--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -42,6 +42,7 @@
         <i class="fa fa-shield fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline">Approvals</span>
         <span class="hidden-sm hidden-xs hidden-md">Quest Approvals</span>
+        <span id="approvals_badge" class="badge alert-danger list-group-item-badge "></span>
       </a>
   </div>
   {% endif %}
