Suggestion Box BETA

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -110,7 +110,7 @@
             <i class="fa fa-bars"></i>
           </a>
           <ul class="dropdown-menu">
-            <!-- <li><a href="{% url 'suggestions:list' %}"><i class="fa fa-fw fa-lightbulb-o"></i>&nbsp;&nbsp;Suggestion Box</a></li> -->
+            <li><a href="{% url 'suggestions:list' %}"><i class="fa fa-fw fa-lightbulb-o"></i>&nbsp;&nbsp;Suggestion Box BETA</a></li>
             <li><a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
                 <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map</a></li>
             <li><a href="{% url 'courses:ranks' %}"><i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
