--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -1,7 +1,8 @@
 {% load staticfiles %}
 
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top
+{% if request.user.profile.chillax %} chillax {% endif %}">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
