--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -13,6 +13,7 @@
   <div class="panel accordian
     {% if object.id == active_id %} active {% endif %}
     {% if object|notification_unread:request.user %}panel-warning note-unread
+    {% elif object.not_yet_released %}panel-warning
     {% elif object.draft %}panel-warning
     {% elif object.sticky %}panel-info
     {% else %}panel-default
@@ -29,10 +30,9 @@
       data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
       <h4 class="panel-title">
         <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{object.id}}" aria-expanded="true" aria-controls="collapse{{object.id}}"> -->
-          {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>
-          {% elif object.draft %}<i class="fa fa-wrench">&nbsp;</i>
-          {% endif %}
-          {{object.title}}
+        {% if object.draft %}<i class="fa fa-wrench">&nbsp;</i>{% endif %}
+        {% if object.sticky %}<i class="fa fa-exclamation-circle">&nbsp;</i>{% endif %}
+        {{object.title}}
         <!-- </a> -->
         <small class="pull-right">{{object.datetime_released.date|date:'D, N j, Y'}}</small>
       </h4>
