--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -59,22 +59,23 @@
 
         {% csrf_token %}
         {{ submission_form | crispy }}
-
-      {% if request.user.is_staff %}
-        {% if submission.is_approved %}
-          <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+        <div class='form-group form-group-summernote'>
+        {% if request.user.is_staff %}
+          {% if submission.is_approved %}
+            <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+          {% else %}
+            <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
+          {% endif %}
+            <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
         {% else %}
-          <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
+          {% if submission.is_approved %}
+            <input type='submit' name='comment' class='btn btn-primary' value='Add Comment' />
+          {% else %}
+            <input id ='tour-submit-quest' type='submit' name='complete' class='btn btn-primary' value='Submit Quest for Completion' />
+            <a class="btn btn-danger" href="{% url 'quests:drop' submission.id %}" role="button">Drop Quest</a>
+          {% endif %}
         {% endif %}
-          <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
-      {% else %}
-        {% if submission.is_approved %}
-          <input type='submit' name='comment' class='btn btn-primary' value='Add Comment' />
-        {% else %}
-          <input id ='tour-submit-quest' type='submit' name='complete' class='btn btn-primary' value='Submit Quest for Completion' />
-          <a class="btn btn-danger" href="{% url 'quests:drop' submission.id %}" role="button">Drop Quest</a>
-        {% endif %}
-      {% endif %}
+        </div>
       </form>
     </div>
   </div>
