--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -92,6 +92,10 @@
   {% endfor %}
   </div>
 
+  {% with items=submissions %}
+    {% include "quest_manager/pagination_controls.html" %}
+  {% endwith %}
+
 {% else %}
   <p>None.</p>
 {% endif %}
