--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -16,20 +16,21 @@
 {% block content %}
 <!-- <table class="table table-striped"> -->
 <table data-toggle="table" data-sort-name='first' data-sort-order='asc'
-  data-icons-prefix='fa' data-search='true'>
+  data-icons-prefix='fa' data-search='true' data-show-columns='true'>
   <thead>
     <tr>
       <th data-sortable='true' data-field='username'>Username</th>
       {% if request.user.is_staff %}
-      <th data-sortable='true' data-field='xp'>XP</th>
+      <th data-sortable='true' data-field='xp' data-visible="false">XP</th>
       <th data-sortable='true' data-field='mark'>Mark</th>
+      <th data-sortable='true' data-field='last_sub'>Last Submission</th>
       <th data-sortable='true' data-field='first'>First Name</th>
+      <th data-sortable='true' data-field='pref' data-visible="false">Preferred</th>
       <th data-sortable='true' data-field='last'>Last Name</th>
-      <th data-sortable='true' data-field='pref'>Preferred</th>
-      <!-- <th data-sortable='true' data-field='alias'>Alias</th> -->
-      <th data-field='comment_ban'></th>
-      <th data-field='gamelab'></th>
-      <th data-field='pw'></th>
+      <th data-sortable='true' data-field='alias' data-visible="false">Alias</th>
+      <th data-field='comment_ban' data-switchable="false"></th>
+      <th data-field='gamelab' data-switchable="false"></th>
+      <th data-field='pw' data-switchable="false"></th>
       {% endif %}
     </tr>
   </thead>
@@ -41,13 +42,14 @@
         <a href="{% url 'profiles:profile_detail' object.id %}">
         {{object.user}}
         </a>
-      </th>
-      <td>{{object.xp}}</th>
-      <td>{{object.mark|floatformat}}%</th>
+      </td>
+      <td>{{object.xp}}</td>
+      <td>{{object.mark|floatformat}}%</td>
+      <td>{{object.last_submission_completed.time_completed|timesince}} ago</td>
       <td>{{object.first_name}}</td>
-      <td>{{object.last_name}}</td>
       <td>{{object.preferred_name}}</td>
-      <!-- <td>{{object.alias}}</td> -->
+      <td>{{object.last_name}}</td>
+      <td>{{object.alias}}</td>
       <td><a href="{% url 'profiles:comment_ban_toggle' object.id %}">
         <small {% if object.banned_from_comments %}class="text-danger"{% endif %}>
           Comments <b>{{object.banned_from_comments|yesno:'BANNED,ON'}}</b></small></a>
