Option for sharing profiles

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -19,15 +19,16 @@
   data-icons-prefix='fa' data-search='true' data-show-columns='true'>
   <thead>
     <tr>
-      <th data-sortable='true' data-field='username'>Username</th>
-      {% if request.user.is_staff %}
-      <th data-sortable='true' data-field='xp' data-visible="false">XP</th>
-      <th data-sortable='true' data-field='mark'>Mark</th>
-      <th data-sortable='true' data-field='last_sub'>Last Submission</th>
-      <th data-sortable='true' data-field='first'>First Name</th>
-      <th data-sortable='true' data-field='pref' data-visible="false">Preferred</th>
+      <th data-field='avatar' {% if request.user.is_staff %}data-visible="false"{% endif %}>Avatar</th>
+      <th data-sortable='true' data-field='first'>Preferred Name</th>
       <th data-sortable='true' data-field='last'>Last Name</th>
       <th data-sortable='true' data-field='alias' data-visible="false">Alias</th>
+      <th data-sortable='true' data-field='xp' data-visible="false">XP</th>
+      <th data-sortable='true' data-field='num_courses'># Blocks</th>
+      <th data-sortable='true' data-field='mark'>Mark</th>
+      {% if request.user.is_staff %}
+      <th data-sortable='true' data-field='last_sub'>Last Quest</th>
+      <th data-sortable='true' data-field='username'>Student #</th>
       <th data-field='comment_ban' data-switchable="false"></th>
       <th data-field='gamelab' data-switchable="false"></th>
       <th data-field='pw' data-switchable="false"></th>
@@ -36,34 +37,33 @@
   </thead>
   <tbody>
     {% for object in object_list %}
-    <tr {% if object.game_lab_transfer_process_on %}class="danger"{% endif %}>
-      {% if request.user.is_staff %}
-      <td>
-        <a href="{% url 'profiles:profile_detail' object.id %}">
-        {{object.user}}
-        </a>
-      </td>
-      <td>{{object.xp}}</td>
-      <td>{{object.mark|floatformat}}%</td>
-      <td>{{object.last_submission_completed.time_completed|timesince}} ago</td>
-      <td>{{object.first_name}}</td>
-      <td>{{object.preferred_name}}</td>
+    {% if request.user.is_staff or request.user = object.user or object.visible_to_other_students %}
+    <tr {% if object.game_lab_transfer_process_on and request.user.is_staff %}class="danger"{% endif %}>
+      <td><img class="icon-md img-rounded" src="{{object.get_avatar_url}}" alt="avatar"/></td>
+      {% if object.preferred_name %}<td>{{object.preferred_name}}</td>
+      {% else %}<td>{{object.first_name}}</td>{% endif %}
       <td>{{object.last_name}}</td>
       <td>{{object.alias}}</td>
-      <td><a href="{% url 'profiles:comment_ban_toggle' object.id %}">
-        <small {% if object.banned_from_comments %}class="text-danger"{% endif %}>
-          Comments <b>{{object.banned_from_comments|yesno:'BANNED,ON'}}</b></small></a>
-      </td>
-      <td><a href="{% url 'profiles:GameLab_toggle' object.id %}">
-        <small {% if object.game_lab_transfer_process_on %}class="text-danger"{% endif %}>
-          GameLab <b>{{object.game_lab_transfer_process_on|yesno:'ON,OFF'}}</b></small></a>
-      </td>
-      <td><a href="/admin/auth/user/{{object.user.id}}/password/"><small>Reset password</small></a>
-      </td>
-      {% else %}
-      <td>{{object.user}}</td>
+      <td>{{object.xp}}</td>
+      <td>{{object.num_courses}}</td>
+      <td>{{object.mark|floatformat}}%</td>
+      {% if request.user.is_staff %}
+        <td><small>{{object.last_submission_completed.time_completed|timesince}} ago</small></td>
+        <td><a href="{% url 'profiles:profile_detail' object.id %}">
+          {{object.user}}</a></td>
+        <td><a href="{% url 'profiles:comment_ban_toggle' object.id %}">
+          <small {% if object.banned_from_comments %}class="text-danger"{% endif %}>
+            Comments <b>{{object.banned_from_comments|yesno:'BANNED,ON'}}</b></small></a>
+        </td>
+        <td><a href="{% url 'profiles:GameLab_toggle' object.id %}">
+          <small {% if object.game_lab_transfer_process_on %}class="text-danger"{% endif %}>
+            GameLab <b>{{object.game_lab_transfer_process_on|yesno:'ON,OFF'}}</b></small></a>
+        </td>
+        <td><a href="/admin/auth/user/{{object.user.id}}/password/"><small>Reset password</small></a>
+        </td>
       {% endif %}
     </tr>
+    {% endif %}
     {% endfor %}
   </tbody>
 </table>
