--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -24,7 +24,7 @@
       </a>
       <a id="groups-menu" class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
         href="{% url 'profiles:profile_list' %}">
-        <i class="fa fa-users fa-fw"></i>&nbsp; Group
+        <i class="fa fa-users fa-fw"></i>&nbsp; Students
       </a>
       <a id="announcements-menu" class="list-group-item {% if '/announcements/' in request.path_info %}active{% endif %}"
         href="{% url 'announcements:list' %}">
