--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -87,6 +87,7 @@
                     title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
                   <a class="btn btn-info" target="_blank"
                     href="{% url 'badges:grant' 0 s.user.id %}" role="button">Grant Badge</a>
+                  <a class="btn btn-default" href="{% url 'quests:skip' s.id %}" role="button">GameLab Transfer</a>
 
               </div>
             </form>
