--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -12,6 +12,10 @@
       title = "Create a copy of this quest" >
       <i class="fa fa-copy"></i>
     </a>
+    <a class="btn btn-default" href="{% url 'quests:approved_for_quest' q.id %}" role="button"
+      title = "View all submissions of this quest" >
+      <i class="fa fa-folder-open-o"></i>
+    </a>
     <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button"
       title = "Delete this quest" >
       <i class="fa fa-trash-o"></i>
