Minor style/text tweaks

--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -49,7 +49,7 @@
           </a>
         </div>
         <a class="btn btn-success pull-right" title="Grant to a student" href="{% url 'badges:grant' badge.id 0 %}" role="button">
-          <i class="fa fa-send-o"></i>
+          <i class="fa fa-gift"></i>
         </a>
         {% endif %}
         '>
