Badge awarding with quest approval/rejection etc.

--- a/src/templates/base_sidebar.html
+++ b/src/templates/base_sidebar.html
@@ -25,6 +25,6 @@
 
 {% block tour_js %}
     {% if request.user.profile.intro_tour_completed = False %}
-      {% include 'intro_tour.html' %}
+      <!--include 'intro_tour.html' -->
     {% endif %}
 {% endblock %}
