--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -90,6 +90,9 @@
       if ($('.dismiss-in-3').length) {
         setTimeout(function(){ $('.dismiss-in-3').slideUp(); }, 3000);
       }
+      if ($('.dismiss-in-5').length) {
+        setTimeout(function(){ $('.dismiss-in-5').slideUp(); }, 5000);
+      }
 
       ajaxNotificationsBadge()
       setInterval(ajaxNotificationsBadge, timeout);
