Fix badge icons in profile detail template

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -177,7 +177,7 @@
       <div class="list-group">
       {% for badge_type, assertions in badge_assertions_dict_items %}
         <div class="list-group-item list-group-item-info">
-            <i class="pull-right fa fa-fw {{badges.badge_type.fa_icon}}"></i>
+            <i class="pull-right fa fa-fw {{badge_type.fa_icon}}"></i>
             {{badge_type.name}}s
           </h3>
         </div>
