--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -34,6 +34,7 @@
             <!-- <li role="separator" class="divider"></li> -->
             <!-- <li class="dropdown-header">Reports</li>
             <li><a href="#">Remove User</a></li> -->
+            <li><a href="/config">Configuration</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Database</li>
             <li><a href="/admin">Django Admin</a></li>
